--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     min-height: 100vh;
     /*background: #111111;*/
-    background: url('./img/maiAnh2.png') black;
+    background: url('./img/Artboard1.png') black;
     background-repeat: no-repeat;
     background-position: center;
   }
